--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,4 @@ packages/Microsoft\.AspNet\.WebApi\.Client\.5\.2\.3/lib/net45/
 packages/Microsoft\.AspNet\.WebApi\.5\.2\.3/
 
 packages/Microsoft\.AspNet\.WebApi\.Client\.5\.2\.3/
+/packages/AutoMapper.6.2.2
