--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,5 @@ packages/Microsoft\.AspNet\.WebApi\.5\.2\.3/
 
 packages/Microsoft\.AspNet\.WebApi\.Client\.5\.2\.3/
 /packages/AutoMapper.6.2.2
+
+packages/bootbox\.4\.3\.0/
