--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -266,6 +266,10 @@
     <Compile Include="Migrations\201710152219520_CreateEditMovie.Designer.cs">
       <DependentUpon>201710152219520_CreateEditMovie.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201803050109366_SeedUsers.cs" />
+    <Compile Include="Migrations\201803050109366_SeedUsers.Designer.cs">
+      <DependentUpon>201803050109366_SeedUsers.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -575,6 +579,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201710152219520_CreateEditMovie.resx">
       <DependentUpon>201710152219520_CreateEditMovie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803050109366_SeedUsers.resx">
+      <DependentUpon>201803050109366_SeedUsers.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
