Adding Profile Data
Lecture 94 Section 8

--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -270,6 +270,10 @@
     <Compile Include="Migrations\201803050109366_SeedUsers.Designer.cs">
       <DependentUpon>201803050109366_SeedUsers.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201803110129463_AddDrivingLicenseToApplicationUser.cs" />
+    <Compile Include="Migrations\201803110129463_AddDrivingLicenseToApplicationUser.Designer.cs">
+      <DependentUpon>201803110129463_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -584,6 +588,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201803050109366_SeedUsers.resx">
       <DependentUpon>201803050109366_SeedUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803110129463_AddDrivingLicenseToApplicationUser.resx">
+      <DependentUpon>201803110129463_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
