Add Phone to Aplication User
Section 8 Exercise

--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -274,6 +274,10 @@
     <Compile Include="Migrations\201803110129463_AddDrivingLicenseToApplicationUser.Designer.cs">
       <DependentUpon>201803110129463_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201803111907346_AddPhoneToAplicationUser.cs" />
+    <Compile Include="Migrations\201803111907346_AddPhoneToAplicationUser.Designer.cs">
+      <DependentUpon>201803111907346_AddPhoneToAplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -591,6 +595,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201803110129463_AddDrivingLicenseToApplicationUser.resx">
       <DependentUpon>201803110129463_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803111907346_AddPhoneToAplicationUser.resx">
+      <DependentUpon>201803111907346_AddPhoneToAplicationUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
