--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -223,6 +223,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\Api\CustomersController.cs" />
     <Compile Include="Controllers\Api\MoviesController.cs" />
+    <Compile Include="Controllers\Api\NewRentalsController.cs" />
     <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -231,6 +232,7 @@
     <Compile Include="Dto\GenreDto.cs" />
     <Compile Include="Dto\MembershipTypeDto.cs" />
     <Compile Include="Dto\MovieDto.cs" />
+    <Compile Include="Dto\NewRentalsDto.cs" />
     <Compile Include="GlimpseSecurityPolicy.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -295,6 +297,14 @@
     <Compile Include="Migrations\201803111907346_AddPhoneToAplicationUser.Designer.cs">
       <DependentUpon>201803111907346_AddPhoneToAplicationUser.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201803192332381_AddRental.cs" />
+    <Compile Include="Migrations\201803192332381_AddRental.Designer.cs">
+      <DependentUpon>201803192332381_AddRental.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201803192335465_AddNumberAvailableToMovie.cs" />
+    <Compile Include="Migrations\201803192335465_AddNumberAvailableToMovie.Designer.cs">
+      <DependentUpon>201803192335465_AddNumberAvailableToMovie.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -304,6 +314,7 @@
     <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Min18YearsIfAMember.cs" />
     <Compile Include="Models\Movie.cs" />
+    <Compile Include="Models\Rental.cs" />
     <Compile Include="Models\RoleName.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -615,6 +626,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201803111907346_AddPhoneToAplicationUser.resx">
       <DependentUpon>201803111907346_AddPhoneToAplicationUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803192332381_AddRental.resx">
+      <DependentUpon>201803192332381_AddRental.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803192335465_AddNumberAvailableToMovie.resx">
+      <DependentUpon>201803192335465_AddNumberAvailableToMovie.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
