--- a/Vidly/Web.Testing.config
+++ b/Vidly/Web.Testing.config
@@ -9,11 +9,16 @@
     finds an attribute "name" that has a value of "MyDB".
     
   -->
+
+  <appSettings>
+    <add key="MailServer" value="test-smtp.vidly.com"
+         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+  </appSettings>
   
   <connectionStrings>
     <add name="DeafaultConnection" 
          connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True" 
-         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+         xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
   </connectionStrings>
   
   <system.web>
